# excFeed

./: .gitignore  pyproject.toml
ig/: index.js
wp/: crawl.py
